analytics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: cnd-analytics
  labels:
    app.kubernetes.io/name: umami
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: umami
